[gd_scene load_steps=13 format=3 uid="uid://di25hfxjvfugn"]

[ext_resource type="Script" path="res://scripts/ui/toolbar.gd" id="1_a4axe"]
[ext_resource type="Texture2D" uid="uid://dbuhv7006hx1q" path="res://assets/gfx/buttons/button_icons.png" id="2_1dkig"]
[ext_resource type="Texture2D" uid="uid://bdknahn28ejfd" path="res://assets/gfx/start_menu.png" id="2_ccml4"]
[ext_resource type="AudioStream" uid="uid://d2hyj1vdys72u" path="res://assets/audio/sounds/Click.wav" id="2_ettyn"]
[ext_resource type="AudioStream" uid="uid://bjuhm3qhuf61u" path="res://assets/audio/sounds/powerups/install_hard_drive.wav" id="2_udr5d"]
[ext_resource type="AudioStream" uid="uid://npj6bvslhyiu" path="res://assets/audio/sounds/hover click4.wav" id="2_xjlwx"]
[ext_resource type="AudioStream" uid="uid://q7seum55johb" path="res://assets/audio/sounds/powerups/delete_system32.wav" id="3_x2x3o"]
[ext_resource type="AudioStream" uid="uid://cvy2yb8xscj86" path="res://assets/audio/sounds/powerups/Charge-Up Magic Harp.wav" id="4_j71o2"]
[ext_resource type="PackedScene" uid="uid://dxm3k1txq3n6c" path="res://scenes/ui/disk_space_bar.tscn" id="4_xto7r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hpb2x"]
atlas = ExtResource("2_1dkig")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_43tsx"]
atlas = ExtResource("2_1dkig")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yycvd"]
atlas = ExtResource("2_1dkig")
region = Rect2(128, 0, 64, 64)

[node name="Toolbar" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_a4axe")

[node name="InstallHardDriveSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_udr5d")
volume_db = -6.0
pitch_scale = 1.05
bus = &"SFX"

[node name="DeleteSystem32SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_x2x3o")
volume_db = -10.0
pitch_scale = 0.8
bus = &"SFX"

[node name="DeleteAllWindowsSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_j71o2")
volume_db = -10.0
bus = &"SFX"

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xjlwx")
volume_db = 5.0
bus = &"SFX"

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ettyn")
volume_db = -5.0
bus = &"SFX"

[node name="Blocker" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.156863)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="PauseMenu" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"TitlePanel"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PauseMenu"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_ccml4")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Power1Button" type="Button" parent="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Restart Window Manager
(Delete all current windows)"

[node name="Power4Button" type="Button" parent="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Install AutoCloseTrashWin
(Occupies space)"

[node name="Power2Button" type="Button" parent="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Plug External Drive
(Add more disk space)"

[node name="Power3Button" type="Button" parent="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Delete System32
(Free a lot of space, but...)"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="LogoffButton" type="Button" parent="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"IconButton"
text = "Logoff"
icon = SubResource("AtlasTexture_hpb2x")

[node name="ShutdownButton" type="Button" parent="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"IconButton"
text = "Shutdown"
icon = SubResource("AtlasTexture_43tsx")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_type_variation = &"ToolbarPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
clip_contents = true
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"GreenButton"
text = "Start"
icon = SubResource("AtlasTexture_yycvd")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(384, 48)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "C:"

[node name="Diskbar" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/CenterContainer/HBoxContainer" instance=ExtResource("4_xto7r")]
unique_name_in_owner = true
layout_mode = 2

[node name="DiskSpaceLabel" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "w"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EmptyButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Empty trash"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Time" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="Date" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer2/VBoxContainer/Power1Button" to="." method="_on_power_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer2/VBoxContainer/Power4Button" to="." method="_on_power_4_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer2/VBoxContainer/Power2Button" to="." method="_on_power_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer2/VBoxContainer/Power3Button" to="." method="_on_power_3_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer/LogoffButton" to="." method="_on_mouse_enter_play_hover_sfx"]
[connection signal="pressed" from="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer/LogoffButton" to="." method="_on_logoff_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer/ShutdownButton" to="." method="_on_mouse_enter_play_hover_sfx"]
[connection signal="pressed" from="VBoxContainer/PauseMenu/VBoxContainer/HBoxContainer/ShutdownButton" to="." method="_on_shutdown_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/PanelContainer/HBoxContainer/MarginContainer/StartButton" to="." method="_on_mouse_enter_play_hover_sfx"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MarginContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/EmptyButton" to="." method="_on_mouse_enter_play_hover_sfx"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/EmptyButton" to="." method="_on_empty_button_pressed"]
